<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CadastroAmigoActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etxNome" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/digiteNome"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/etxPhone" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etxNome" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/digiteTel"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/etxEmail" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etxPhone" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/digiteEmail"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:ems="10"
            android:id="@+id/etxFacebook" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etxEmail" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/digiteUrl"/>
    <android.support.design.widget.FloatingActionButton
            android:layout_height="wrap_content"
            android:clickable="true" app:srcCompat="@drawable/ic_camera_alt"
            android:id="@+id/cameraButton"
            app:backgroundTint="@android:color/background_light"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etxFacebook"
            android:layout_width="wrap_content" app:layout_constraintStart_toEndOf="@+id/photoImageView"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/cadastrar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnCadastrarAmigo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            style="@style/Widget.AppCompat.Button.Borderless" android:background="@android:color/holo_green_dark"
            android:textColor="@android:color/background_light"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/photoImageView"/>
    <Button
            android:text="@string/deletar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnDelete" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnCadastrarAmigo" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:background="@android:color/holo_red_dark" android:textColor="@android:color/background_light"
    />
    <ImageView
            android:id="@+id/photoImageView"
            android:contentDescription="View for displaying image"
            app:srcCompat="@android:color/darker_gray"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etxFacebook" android:layout_width="150dp"
            android:layout_height="150dp"/>

</android.support.constraint.ConstraintLayout>