<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/colorAccent"
              android:id="@+id/list_item"
              android:orientation="vertical"
              android:layout_margin="2dp">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginStart="5dp"
                android:background="@android:color/white"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/txtNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/name"
                    android:textSize="18sp"
                    tools:targetApi="jelly_bean" android:textAppearance="@style/TextAppearance.AppCompat"/>

            <TextView
                    android:id="@+id/txtTelefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/telefone"
                    tools:targetApi="jelly_bean" android:textAppearance="@style/TextAppearance.AppCompat.Button"/>
            <TextView
                    android:layout_width="match_parent"
                    android:padding="5dp"
                    android:layout_height="wrap_content" android:id="@+id/txtEmail"/>
            <!--android:tools:targetApi="jelly_bean"/>-->
            <TextView
                    android:layout_width="match_parent"
                    android:padding="5dp"
                    android:layout_height="wrap_content" android:id="@+id/txtFacebook"
                    tools:targetApi="jelly_bean"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="150dp"
                android:layout_height="150dp">
            <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp" tools:srcCompat="@d"
                    android:id="@+id/photoImageView"
                    android:contentDescription="@string/app_name"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>